--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
         <h2>My Projects</h2>
         <div>
             <img src="placeholder.png" alt="Project 1">
-            <p>Project 1: Description of your project goes here.</p>
+            <p>Project 1: Online cake ordering system.</p>
         </div>
         <div>
             <img src="placeholder.png" alt="Project 2">
