--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
         </div>
         <div>
             <img src="placeholder.png" alt="Project 2">
-            <p>Project 2: Description of your project goes here.</p>
+            <p>Project 2: Blur detection.</p>
         </div>
         <!-- Add more projects as needed -->
     </section>
